--- a/insertion/pom.xml
+++ b/insertion/pom.xml
@@ -3,7 +3,10 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.example</groupId>
   <artifactId>insertion</artifactId>
-  <packaging>war</packaging>
+  <packaging>pom</packaging>
+  <modules>
+    <module>update</module>
+  </modules>
   <version>1.0-SNAPSHOT</version>
   <name>insertion Maven Webapp</name>
   <url>http://maven.apache.org</url>
