--- a/insertion/pom.xml
+++ b/insertion/pom.xml
@@ -7,6 +7,7 @@
   <modules>
     <module>update</module>
     <module>read</module>
+    <module>delete</module>
   </modules>
   <version>1.0-SNAPSHOT</version>
   <name>insertion Maven Webapp</name>
