--- a/company/pom.xml
+++ b/company/pom.xml
@@ -14,7 +14,13 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>8.0.31</version>
     </dependency>
-
+    <!-- Source: https://mvnrepository.com/artifact/javax.servlet/jstl -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+      <scope>compile</scope>
+    </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
